fix: scroll to top visible if consents banner is displayed (#19764)

--- a/projects/storefrontstyles/scss/components/content/navigation/_scroll-to-top.scss
+++ b/projects/storefrontstyles/scss/components/content/navigation/_scroll-to-top.scss
@@ -12,12 +12,6 @@
     animation: popup 1s 1;
   }
 
-  @include forFeature('a11yScrollToTopPositioning') {
-    &.elevated-position {
-      bottom: 180px;
-    }
-  }
-
   button {
     height: inherit;
     width: inherit;
